# milliseriesdb

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.github/workflows/: build-and-push.yml  release.yml
api/: query.rest
examples/: append.rs  bench.rs  index.rs  query.rs
src/: buffering.rs  failpoints.rs  lib.rs  main.rs
src/cluster/: mod.rs
src/csv/: mod.rs
src/db/: compression.rs  data.rs  entry.rs  file_system.rs  index.rs  io_utils.rs  log.rs  mod.rs  series.rs  series_table.rs  table.rs  utils.rs
src/db/executor/: agg.rs  mod.rs  query.rs  query_expr.rs
src/db/replication/: block_batch.rs  mod.rs  primary.rs  replica.rs
src/query/: aggregation.rs  group_by.rs  into_entries_iter.rs  mod.rs  query.rs  round.rs  statement.rs  statement_expr.rs
src/repl/: mod.rs
src/restapi/: append.rs  create.rs  error.rs  export.rs  mod.rs  query.rs  restore.rs
src/rpc/: mod.rs
src/storage/: commit_log.rs  compression.rs  data.rs  entry.rs  env.rs  error.rs  failpoints.rs  file_system.rs  index.rs  io_utils.rs  log.rs  mod.rs  series.rs  series_table.rs  test_utils.rs  utils.rs
src/storage/series/: mod.rs  series_reader.rs  series_writer.rs
