[package]
name = "milliseriesdb"
version = "0.1.0"
authors = ["whiter4bbit <wr4bbit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "0.2" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bytes = "1.0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = "2"
hyper = "0.14"
http = "0.2"
log = "0.4"
stderrlog = "0.5.1"